libqt6c/src/libqpainter.hpp

typedef QPainter::PixmapFragment QPainter__PixmapFragment;
typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QGlyphRun QGlyphRun;
typedef struct QImage QImage;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPainter__PixmapFragment QPainter__PixmapFragment;
typedef struct QPicture QPicture;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QStaticText QStaticText;
typedef struct QTextItem QTextItem;
typedef struct QTransform QTransform;
void QPainter_DrawArc3(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawPie(QPainter* self, const QRectF* rect, int a, int alen);
void QPainter_DrawPie2(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawPie3(QPainter* self, const QRect* param1, int a, int alen);
void QPainter_DrawChord(QPainter* self, const QRectF* rect, int a, int alen);
void QPainter_DrawChord2(QPainter* self, int x, int y, int w, int h, int a, int alen);
void QPainter_DrawChord3(QPainter* self, const QRect* param1, int a, int alen);
void QPainter_DrawRoundedRect(QPainter* self, const QRectF* rect, double xRadius, double yRadius);
void QPainter_DrawRoundedRect2(QPainter* self, int x, int y, int w, int h, double xRadius, double yRadius);
void QPainter_DrawRoundedRect3(QPainter* self, const QRect* rect, double xRadius, double yRadius);
void QPainter_DrawTiledPixmap(QPainter* self, const QRectF* rect, const QPixmap* pm);
void QPainter_DrawTiledPixmap2(QPainter* self, int x, int y, int w, int h, const QPixmap* param5);
void QPainter_DrawTiledPixmap3(QPainter* self, const QRect* param1, const QPixmap* param2);
void QPainter_DrawPicture(QPainter* self, const QPointF* p, const QPicture* picture);
void QPainter_DrawPicture2(QPainter* self, int x, int y, const QPicture* picture);
void QPainter_DrawPicture3(QPainter* self, const QPoint* p, const QPicture* picture);
void QPainter_DrawPixmap(QPainter* self, const QRectF* targetRect, const QPixmap* pixmap, const QRectF* sourceRect);
void QPainter_DrawPixmap2(QPainter* self, const QRect* targetRect, const QPixmap* pixmap, const QRect* sourceRect);
void QPainter_DrawPixmap3(QPainter* self, int x, int y, int w, int h, const QPixmap* pm, int sx, int sy, int sw, int sh);
void QPainter_DrawPixmap4(QPainter* self, int x, int y, const QPixmap* pm, int sx, int sy, int sw, int sh);
void QPainter_DrawPixmap5(QPainter* self, const QPointF* p, const QPixmap* pm, const QRectF* sr);
void QPainter_DrawPixmap6(QPainter* self, const QPoint* p, const QPixmap* pm, const QRect* sr);
void QPainter_DrawPixmap7(QPainter* self, const QPointF* p, const QPixmap* pm);
void QPainter_DrawPixmap8(QPainter* self, const QPoint* p, const QPixmap* pm);
void QPainter_DrawPixmap9(QPainter* self, int x, int y, const QPixmap* pm);
void QPainter_DrawPixmap10(QPainter* self, const QRect* r, const QPixmap* pm);
void QPainter_DrawPixmap11(QPainter* self, int x, int y, int w, int h, const QPixmap* pm);
void QPainter_DrawPixmapFragments(QPainter* self, const QPainter__PixmapFragment* fragments, int fragmentCount, const QPixmap* pixmap);
void QPainter_DrawImage(QPainter* self, const QRectF* targetRect, const QImage* image, const QRectF* sourceRect);
void QPainter_DrawImage2(QPainter* self, const QRect* targetRect, const QImage* image, const QRect* sourceRect);
void QPainter_DrawImage3(QPainter* self, const QPointF* p, const QImage* image, const QRectF* sr);
void QPainter_DrawImage4(QPainter* self, const QPoint* p, const QImage* image, const QRect* sr);
void QPainter_DrawImage5(QPainter* self, const QRectF* r, const QImage* image);
void QPainter_DrawImage6(QPainter* self, const QRect* r, const QImage* image);
void QPainter_DrawImage7(QPainter* self, const QPointF* p, const QImage* image);
void QPainter_DrawImage8(QPainter* self, const QPoint* p, const QImage* image);
void QPainter_DrawImage9(QPainter* self, int x, int y, const QImage* image);
void QPainter_SetLayoutDirection(QPainter* self, int direction);
int QPainter_LayoutDirection(const QPainter* self);
void QPainter_DrawGlyphRun(QPainter* self, const QPointF* position, const QGlyphRun* glyphRun);
void QPainter_DrawStaticText(QPainter* self, const QPointF* topLeftPosition, const QStaticText* staticText);
void QPainter_DrawStaticText2(QPainter* self, const QPoint* topLeftPosition, const QStaticText* staticText);
void QPainter_DrawStaticText3(QPainter* self, int left, int top, const QStaticText* staticText);
void QPainter_DrawText(QPainter* self, const QPointF* p, const libqt_string s);
void QPainter_DrawText2(QPainter* self, const QPoint* p, const libqt_string s);
void QPainter_DrawText3(QPainter* self, int x, int y, const libqt_string s);
void QPainter_DrawText4(QPainter* self, const QPointF* p, const libqt_string str, int tf, int justificationPadding);
void QPainter_DrawText5(QPainter* self, const QRectF* r, int flags, const libqt_string text);
void QPainter_DrawText6(QPainter* self, const QRect* r, int flags, const libqt_string text);
void QPainter_DrawText7(QPainter* self, int x, int y, int w, int h, int flags, const libqt_string text);
void QPainter_DrawText8(QPainter* self, const QRectF* r, const libqt_string text);
QRectF* QPainter_BoundingRect(QPainter* self, const QRectF* rect, int flags, const libqt_string text);
QRect* QPainter_BoundingRect2(QPainter* self, const QRect* rect, int flags, const libqt_string text);
QRect* QPainter_BoundingRect3(QPainter* self, int x, int y, int w, int h, int flags, const libqt_string text);
QRectF* QPainter_BoundingRect4(QPainter* self, const QRectF* rect, const libqt_string text);
void QPainter_DrawTextItem(QPainter* self, const QPointF* p, const QTextItem* ti);
void QPainter_DrawTextItem2(QPainter* self, int x, int y, const QTextItem* ti);
void QPainter_DrawTextItem3(QPainter* self, const QPoint* p, const QTextItem* ti);
void QPainter_FillRect(QPainter* self, const QRectF* param1, const QBrush* param2);
void QPainter_FillRect2(QPainter* self, int x, int y, int w, int h, const QBrush* param5);
void QPainter_FillRect3(QPainter* self, const QRect* param1, const QBrush* param2);
void QPainter_FillRect4(QPainter* self, const QRectF* param1, const QColor* color);
void QPainter_FillRect5(QPainter* self, int x, int y, int w, int h, const QColor* color);
void QPainter_FillRect6(QPainter* self, const QRect* param1, const QColor* color);
void QPainter_FillRect7(QPainter* self, int x, int y, int w, int h, int c);
void QPainter_FillRect8(QPainter* self, const QRect* r, int c);
void QPainter_FillRect9(QPainter* self, const QRectF* r, int c);
void QPainter_FillRect10(QPainter* self, int x, int y, int w, int h, int style);
void QPainter_FillRect11(QPainter* self, const QRect* r, int style);
void QPainter_FillRect12(QPainter* self, const QRectF* r, int style);
void QPainter_FillRect13(QPainter* self, int x, int y, int w, int h, int preset);
void QPainter_FillRect14(QPainter* self, const QRect* r, int preset);
void QPainter_FillRect15(QPainter* self, const QRectF* r, int preset);
void QPainter_EraseRect(QPainter* self, const QRectF* param1);
void QPainter_EraseRect2(QPainter* self, int x, int y, int w, int h);
void QPainter_EraseRect3(QPainter* self, const QRect* param1);
void QPainter_SetRenderHint(QPainter* self, int hint);
void QPainter_SetRenderHints(QPainter* self, int hints);
int QPainter_RenderHints(const QPainter* self);
bool QPainter_TestRenderHint(const QPainter* self, int hint);
QPaintEngine* QPainter_PaintEngine(const QPainter* self);
void QPainter_BeginNativePainting(QPainter* self);
void QPainter_EndNativePainting(QPainter* self);
void QPainter_SetClipRect22(QPainter* self, const QRectF* param1, int op);
void QPainter_SetClipRect23(QPainter* self, const QRect* param1, int op);
void QPainter_SetClipRect5(QPainter* self, int x, int y, int w, int h, int op);
void QPainter_SetClipRegion2(QPainter* self, const QRegion* param1, int op);
void QPainter_SetClipPath2(QPainter* self, const QPainterPath* path, int op);
void QPainter_SetTransform2(QPainter* self, const QTransform* transform, bool combine);