QtBeef/src/Qt/qpainter.bf

	[LinkName("QPainter_DrawArc3")]
	public static extern void QPainter_DrawArc3(void* self, c_int x, c_int y, c_int w, c_int h, c_int a, c_int alen);
	[LinkName("QPainter_DrawPie")]
	public static extern void QPainter_DrawPie(void* self, void** rect, c_int a, c_int alen);
	[LinkName("QPainter_DrawPie2")]
	public static extern void QPainter_DrawPie2(void* self, c_int x, c_int y, c_int w, c_int h, c_int a, c_int alen);
	[LinkName("QPainter_DrawPie3")]
	public static extern void QPainter_DrawPie3(void* self, void** param1, c_int a, c_int alen);
	[LinkName("QPainter_DrawChord")]
	public static extern void QPainter_DrawChord(void* self, void** rect, c_int a, c_int alen);
	[LinkName("QPainter_DrawChord2")]
	public static extern void QPainter_DrawChord2(void* self, c_int x, c_int y, c_int w, c_int h, c_int a, c_int alen);
	[LinkName("QPainter_DrawChord3")]
	public static extern void QPainter_DrawChord3(void* self, void** param1, c_int a, c_int alen);
	[LinkName("QPainter_DrawRoundedRect")]
	public static extern void QPainter_DrawRoundedRect(void* self, void** rect, double xRadius, double yRadius);
	[LinkName("QPainter_DrawRoundedRect2")]
	public static extern void QPainter_DrawRoundedRect2(void* self, c_int x, c_int y, c_int w, c_int h, double xRadius, double yRadius);
	[LinkName("QPainter_DrawRoundedRect3")]
	public static extern void QPainter_DrawRoundedRect3(void* self, void** rect, double xRadius, double yRadius);
	[LinkName("QPainter_DrawTiledPixmap")]
	public static extern void QPainter_DrawTiledPixmap(void* self, void** rect, void** pm);
	[LinkName("QPainter_DrawTiledPixmap2")]
	public static extern void QPainter_DrawTiledPixmap2(void* self, c_int x, c_int y, c_int w, c_int h, void** param5);
	[LinkName("QPainter_DrawTiledPixmap3")]
	public static extern void QPainter_DrawTiledPixmap3(void* self, void** param1, void** param2);
	[LinkName("QPainter_DrawPicture")]
	public static extern void QPainter_DrawPicture(void* self, void** p, void** picture);
	[LinkName("QPainter_DrawPicture2")]
	public static extern void QPainter_DrawPicture2(void* self, c_int x, c_int y, void** picture);
	[LinkName("QPainter_DrawPicture3")]
	public static extern void QPainter_DrawPicture3(void* self, void** p, void** picture);
	[LinkName("QPainter_DrawPixmap")]
	public static extern void QPainter_DrawPixmap(void* self, void** targetRect, void** pixmap, void** sourceRect);
	[LinkName("QPainter_DrawPixmap2")]
	public static extern void QPainter_DrawPixmap2(void* self, void** targetRect, void** pixmap, void** sourceRect);
	[LinkName("QPainter_DrawPixmap3")]
	public static extern void QPainter_DrawPixmap3(void* self, c_int x, c_int y, c_int w, c_int h, void** pm, c_int sx, c_int sy, c_int sw, c_int sh);
	[LinkName("QPainter_DrawPixmap4")]
	public static extern void QPainter_DrawPixmap4(void* self, c_int x, c_int y, void** pm, c_int sx, c_int sy, c_int sw, c_int sh);
	[LinkName("QPainter_DrawPixmap5")]
	public static extern void QPainter_DrawPixmap5(void* self, void** p, void** pm, void** sr);
	[LinkName("QPainter_DrawPixmap6")]
	public static extern void QPainter_DrawPixmap6(void* self, void** p, void** pm, void** sr);
	[LinkName("QPainter_DrawPixmap7")]
	public static extern void QPainter_DrawPixmap7(void* self, void** p, void** pm);
	[LinkName("QPainter_DrawPixmap8")]
	public static extern void QPainter_DrawPixmap8(void* self, void** p, void** pm);
	[LinkName("QPainter_DrawPixmap9")]
	public static extern void QPainter_DrawPixmap9(void* self, c_int x, c_int y, void** pm);
	[LinkName("QPainter_DrawPixmap10")]
	public static extern void QPainter_DrawPixmap10(void* self, void** r, void** pm);
	[LinkName("QPainter_DrawPixmap11")]
	public static extern void QPainter_DrawPixmap11(void* self, c_int x, c_int y, c_int w, c_int h, void** pm);
	[LinkName("QPainter_DrawPixmapFragments")]
	public static extern void QPainter_DrawPixmapFragments(void* self, void** fragments, c_int fragmentCount, void** pixmap);
	[LinkName("QPainter_DrawImage")]
	public static extern void QPainter_DrawImage(void* self, void** targetRect, void** image, void** sourceRect);
	[LinkName("QPainter_DrawImage2")]
	public static extern void QPainter_DrawImage2(void* self, void** targetRect, void** image, void** sourceRect);
	[LinkName("QPainter_DrawImage3")]
	public static extern void QPainter_DrawImage3(void* self, void** p, void** image, void** sr);
	[LinkName("QPainter_DrawImage4")]
	public static extern void QPainter_DrawImage4(void* self, void** p, void** image, void** sr);
	[LinkName("QPainter_DrawImage5")]
	public static extern void QPainter_DrawImage5(void* self, void** r, void** image);
	[LinkName("QPainter_DrawImage6")]
	public static extern void QPainter_DrawImage6(void* self, void** r, void** image);
	[LinkName("QPainter_DrawImage7")]
	public static extern void QPainter_DrawImage7(void* self, void** p, void** image);
	[LinkName("QPainter_DrawImage8")]
	public static extern void QPainter_DrawImage8(void* self, void** p, void** image);
	[LinkName("QPainter_DrawImage9")]
	public static extern void QPainter_DrawImage9(void* self, c_int x, c_int y, void** image);
	[LinkName("QPainter_SetLayoutDirection")]
	public static extern void QPainter_SetLayoutDirection(void* self, Qt_LayoutDirection direction);
	[LinkName("QPainter_LayoutDirection")]
	public static extern Qt_LayoutDirection QPainter_LayoutDirection(void* self);
	[LinkName("QPainter_DrawGlyphRun")]
	public static extern void QPainter_DrawGlyphRun(void* self, void** position, void** glyphRun);
	[LinkName("QPainter_DrawStaticText")]
	public static extern void QPainter_DrawStaticText(void* self, void** topLeftPosition, void** staticText);
	[LinkName("QPainter_DrawStaticText2")]
	public static extern void QPainter_DrawStaticText2(void* self, void** topLeftPosition, void** staticText);
	[LinkName("QPainter_DrawStaticText3")]
	public static extern void QPainter_DrawStaticText3(void* self, c_int left, c_int top, void** staticText);
	[LinkName("QPainter_DrawText")]
	public static extern void QPainter_DrawText(void* self, void** p, libqt_string s);
	[LinkName("QPainter_DrawText2")]
	public static extern void QPainter_DrawText2(void* self, void** p, libqt_string s);
	[LinkName("QPainter_DrawText3")]
	public static extern void QPainter_DrawText3(void* self, c_int x, c_int y, libqt_string s);
	[LinkName("QPainter_DrawText4")]
	public static extern void QPainter_DrawText4(void* self, void** p, libqt_string str, c_int tf, c_int justificationPadding);
	[LinkName("QPainter_DrawText5")]
	public static extern void QPainter_DrawText5(void* self, void** r, c_int flags, libqt_string text);
	[LinkName("QPainter_DrawText6")]
	public static extern void QPainter_DrawText6(void* self, void** r, c_int flags, libqt_string text);
	[LinkName("QPainter_DrawText7")]
	public static extern void QPainter_DrawText7(void* self, c_int x, c_int y, c_int w, c_int h, c_int flags, libqt_string text);
	[LinkName("QPainter_DrawText8")]
	public static extern void QPainter_DrawText8(void* self, void** r, libqt_string text);
	[LinkName("QPainter_BoundingRect")]
	public static extern void* QPainter_BoundingRect(void* self, void** rect, c_int flags, libqt_string text);
	[LinkName("QPainter_BoundingRect2")]
	public static extern void* QPainter_BoundingRect2(void* self, void** rect, c_int flags, libqt_string text);
	[LinkName("QPainter_BoundingRect3")]
	public static extern void* QPainter_BoundingRect3(void* self, c_int x, c_int y, c_int w, c_int h, c_int flags, libqt_string text);
	[LinkName("QPainter_BoundingRect4")]
	public static extern void* QPainter_BoundingRect4(void* self, void** rect, libqt_string text);
	[LinkName("QPainter_DrawTextItem")]
	public static extern void QPainter_DrawTextItem(void* self, void** p, void** ti);
	[LinkName("QPainter_DrawTextItem2")]
	public static extern void QPainter_DrawTextItem2(void* self, c_int x, c_int y, void** ti);
	[LinkName("QPainter_DrawTextItem3")]
	public static extern void QPainter_DrawTextItem3(void* self, void** p, void** ti);
	[LinkName("QPainter_FillRect")]
	public static extern void QPainter_FillRect(void* self, void** param1, void** param2);
	[LinkName("QPainter_FillRect2")]
	public static extern void QPainter_FillRect2(void* self, c_int x, c_int y, c_int w, c_int h, void** param5);
	[LinkName("QPainter_FillRect3")]
	public static extern void QPainter_FillRect3(void* self, void** param1, void** param2);
	[LinkName("QPainter_FillRect4")]
	public static extern void QPainter_FillRect4(void* self, void** param1, void** color);
	[LinkName("QPainter_FillRect5")]
	public static extern void QPainter_FillRect5(void* self, c_int x, c_int y, c_int w, c_int h, void** color);
	[LinkName("QPainter_FillRect6")]
	public static extern void QPainter_FillRect6(void* self, void** param1, void** color);
	[LinkName("QPainter_FillRect7")]
	public static extern void QPainter_FillRect7(void* self, c_int x, c_int y, c_int w, c_int h, Qt_GlobalColor c);
	[LinkName("QPainter_FillRect8")]
	public static extern void QPainter_FillRect8(void* self, void** r, Qt_GlobalColor c);
	[LinkName("QPainter_FillRect9")]
	public static extern void QPainter_FillRect9(void* self, void** r, Qt_GlobalColor c);
	[LinkName("QPainter_FillRect10")]
	public static extern void QPainter_FillRect10(void* self, c_int x, c_int y, c_int w, c_int h, Qt_BrushStyle style);
	[LinkName("QPainter_FillRect11")]
	public static extern void QPainter_FillRect11(void* self, void** r, Qt_BrushStyle style);
	[LinkName("QPainter_FillRect12")]
	public static extern void QPainter_FillRect12(void* self, void** r, Qt_BrushStyle style);
	[LinkName("QPainter_FillRect13")]
	public static extern void QPainter_FillRect13(void* self, c_int x, c_int y, c_int w, c_int h, QGradient_Preset preset);
	[LinkName("QPainter_FillRect14")]
	public static extern void QPainter_FillRect14(void* self, void** r, QGradient_Preset preset);
	[LinkName("QPainter_FillRect15")]
	public static extern void QPainter_FillRect15(void* self, void** r, QGradient_Preset preset);
	[LinkName("QPainter_EraseRect")]
	public static extern void QPainter_EraseRect(void* self, void** param1);
	[LinkName("QPainter_EraseRect2")]
	public static extern void QPainter_EraseRect2(void* self, c_int x, c_int y, c_int w, c_int h);
	[LinkName("QPainter_EraseRect3")]
	public static extern void QPainter_EraseRect3(void* self, void** param1);
	[LinkName("QPainter_SetRenderHint")]
	public static extern void QPainter_SetRenderHint(void* self, QPainter_RenderHint hint);
	[LinkName("QPainter_SetRenderHints")]
	public static extern void QPainter_SetRenderHints(void* self, void* hints);
	[LinkName("QPainter_RenderHints")]
	public static extern void* QPainter_RenderHints(void* self);
	[LinkName("QPainter_TestRenderHint")]
	public static extern bool QPainter_TestRenderHint(void* self, QPainter_RenderHint hint);
	[LinkName("QPainter_PaintEngine")]
	public static extern void** QPainter_PaintEngine(void* self);
	[LinkName("QPainter_BeginNativePainting")]
	public static extern void QPainter_BeginNativePainting(void* self);
	[LinkName("QPainter_EndNativePainting")]
	public static extern void QPainter_EndNativePainting(void* self);
	[LinkName("QPainter_SetClipRect22")]
	public static extern void QPainter_SetClipRect22(void* self, void** param1, Qt_ClipOperation op);
	[LinkName("QPainter_SetClipRect23")]
	public static extern void QPainter_SetClipRect23(void* self, void** param1, Qt_ClipOperation op);
	[LinkName("QPainter_SetClipRect5")]
	public static extern void QPainter_SetClipRect5(void* self, c_int x, c_int y, c_int w, c_int h, Qt_ClipOperation op);
	[LinkName("QPainter_SetClipRegion2")]
	public static extern void QPainter_SetClipRegion2(void* self, void** param1, Qt_ClipOperation op);
	[LinkName("QPainter_SetClipPath2")]
	public static extern void QPainter_SetClipPath2(void* self, void** path, Qt_ClipOperation op);
	[LinkName("QPainter_SetTransform2")]
	public static extern void QPainter_SetTransform2(void* self, void** transform, bool combine);
